--- a/p38/Dockerfile
+++ b/p38/Dockerfile
@@ -30,7 +30,7 @@ RUN chown -Rf ${USER} ${CODE}/ \
 
 USER ${USER}
 ENTRYPOINT ["/bin/bash"]
-CMD ["-c -l"]
+CMD [""]
 
 
 FROM python:3.8-alpine as prod
